"Se agregan 3 metodos más"
