# src/main/java/co/avanzada/model/User.java
@@ -1,26 +1,65 @@
 package co.avanzada.model;
 
-import lombok.Builder;
-import lombok.Getter;
-import lombok.Setter;
+import jakarta.persistence.*;
+import jakarta.validation.constraints.Email;
+import lombok.*;
+import org.hibernate.validator.constraints.Length;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.Date;
+import java.util.List;
+import java.util.Set;
+
 
 @Getter
 @Setter
+@NoArgsConstructor
+@RequiredArgsConstructor
+@AllArgsConstructor
 @Builder
+@Entity
+@Table(name="Users")
 
 public class User {
-    private String id;
-    private String name;
+    @Id
+    @GeneratedValue(strategy= GenerationType.IDENTITY)
+    private Long id;
+
+    @Column(nullable=false, length = 100)
+    private String fullName;
+
+    @Email @Column(nullable=false, unique=true)
     private String email;
+
+    @Column(nullable=false, length = 200)
     private String password;
-    private String phone;
-    private String state;
-    private LocalDateTime createAT;
-    private LocalDateTime dateOfBirth;
-    private Rol rol;
+
+    @Column(nullable=false, length = 200)
+    private String numberPhone;
+
+    @Column(nullable=false)
+    private LocalDateTime createdAt;
+
+    @Column(nullable=false)
+    private LocalDate birthday;
+
+    @ElementCollection
+    @Column(nullable=false)
+    private Set<Rol> rol;
+
+
+    @Column(nullable=false)
     private Status status;
+
+    @OneToMany
+    @Column(nullable=false)
+    private List<Reservations> reservations;
+
+    @OneToMany
+    @Column(nullable=false)
+    private List<Review> reviews;
+
+    //private Boolean isHost; Como funcionaria? preguntar
+    //Deberia tener tambien una lista de alojamientos?
 }
 
